--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -1,139 +1,1051 @@
+
 .tag-cloud {
-	padding: 2px;
-	margin: 0;
-	margin-top: -0.25em;
+  padding: 2px;
+  margin: 0;
+  margin-top: -0.25em;
 }
 
 .tag-cloud a {
-	padding: 0px;
+  padding: 0px;
 }
 
 .tag-cloud li {
-	display: inline;
+  display: inline;
 }
 
 .tag-cloud a.tag-1 {
-	font-size: 1.0em;
-	font-weight: 400;
+  font-size: 1.0em;
+  font-weight: 400;
 }
 
 .tag-cloud a.tag-2 {
-	font-size: 0.9em;
-	font-weight: 300;
+  font-size: 0.9em;
+  font-weight: 300;
 }
 
 .tag-cloud a.tag-3 {
-	font-size: 0.8em;
-	font-weight: 200;
+  font-size: 0.8em;
+  font-weight: 200;
 }
 
 .tag-cloud a.tag-4 {
-	font-size: 0.7em;
-	font-weight: 100;
+  font-size: 0.7em;
+  font-weight: 100;
 }
 
 .img-center {
-	width: 100%;
-	background: red;
-	border: 1px solid green;
+  width: 100%;
+  background: red;
+  border: 1px solid green;
 }
 
 .image-caption {
-	padding-top: 0.5em;
-	font-size: 0.7em;
+  padding-top: 0.5em;
+  font-size: 0.7em;
 }
 
 .image-container {
-	padding-bottom: 1em;
-}
-
-.highlighttable {
-	background: #272822;
-	border: 1px solid #8f908a;
-	width: 100%;
-}
-
-.linenos {
-	color: #8f908a;
-	border-right: 1px dotted #464741;
+  padding-bottom: 1em;
 }
 
 .panel h5 {
-	border-bottom: 2px solid;
-	padding: 0;
-	margin: 0;
-	margin-bottom: 0.25em;
+  border-bottom: 2px solid;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 0.25em;
 }
 
 .side-nav {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .side-nav li {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .side-nav a {
-	color: black;
+  color: black;
 }
 
 .side-nav li a:before {
-	content: "- ";
-}
-
-code {
-	color: #222222;
-	background: #f8f8f8;
-	border: 1px solid #dddddd;
-	margin: 0 2px;
-	padding: 0 5px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	font-weight: normal;
-	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-}
-
-p {
-	text-align: justify;
+  content: "- ";
 }
 
 .continue {
-	width: 100%;
-	text-align: right;
+  width: 100%;
+  text-align: right;
 }
 
 .archive-year {
-	border-top: 1px solid;
+  border-top: 1px solid;
 }
 
 .archive-entry {
-	border-top: 1px dotted;
+  border-top: 1px dotted;
 }
 
-table.highlighttable {
-	table-layout: fixed;
-	white-space: nowrap;
-	width:100%;
+ a {
+  background: transparent;
 }
 
-.linenos {
-	width: 2.25rem;
-	text-align: right;
-	margin: 0;
-	padding: 0;
-	vertical-align: top;
-}
-       
-.highlight{
-	width: 100%;
-	height: auto;
-	overflow: auto;
+ a:active,
+ a:hover {
+  outline: 0;
 }
 
-.linenodiv {
-	margin: 0.55rem 0.5rem 0 0;
-	padding: 0;
+ b,
+ strong {
+  font-weight: bold;
+}
+
+ mark {
+  background: #ff0;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+
+ sub,
+ sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+ sup {
+  top: -0.5em;
+}
+ sub {
+  bottom: -0.25em;
+}
+
+ h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+ img {
+  border: 0;
+}
+
+ hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+}
+
+ pre {
+  overflow: auto;
+}
+
+ code,
+ kbd,
+ pre,
+ samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+ input {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+
+ html input[disabled] {
+  cursor: default;
+}
+
+ input {
+  line-height: normal;
+}
+
+ input[type="checkbox"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+ table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+ td,
+ th {
+  padding: 0;
+}
+
+ .codehilitetable {
+  border: 0;
+  border-spacing: 0;
+}
+
+ .codehilitetable tr {
+  border: 0;
+}
+
+ .codehilitetable pre,
+ div.codehilite {
+  margin: 0;
+}
+
+ .linenos,
+ .code,
+ .codehilitetable td {
+  border: 0;
+  padding: 0;
+}
+
+ td:not(.linenos) .linenodiv {
+  padding: 0 !important;
+}
+
+ .code {
+  width: 100%;
+}
+
+ .linenos div pre,
+ .linenodiv pre,
+ .linenodiv {
+  border: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-border-top-left-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -moz-border-radius-topleft: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  font-size: 14px;
+  line-height: 1.45;
+}
+
+ .code div pre,
+ .code div {
+  border: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  -moz-border-radius-topright: 3px;
+  -moz-border-radius-bottomright: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+ * {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+ input {
+  font: 13px Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  line-height: 1.4;
+}
+
+ a {
+  color: #4183c4;
+  text-decoration: none;
+}
+
+ hr {
+  height: 0;
+  margin: 15px 0;
+  overflow: hidden;
+  background: transparent;
+  border: 0;
+  border-bottom: 1px solid #ddd;
+}
+
+ hr:before,
+ hr:after {
+  display: table;
+  content: " ";
+}
+
+ hr:after {
+  clear: both;
+}
+
+ h1,
+ h2,
+ h3,
+ h4,
+ h5,
+ h6 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  line-height: 1.1;
+}
+
+ h1 {
+  font-size: 30px;
+}
+
+ h2 {
+  font-size: 21px;
+}
+
+ h3 {
+  font-size: 16px;
+}
+
+ h4 {
+  font-size: 14px;
+}
+
+ h5 {
+  font-size: 12px;
+}
+
+ h6 {
+  font-size: 11px;
+}
+
+ blockquote {
+  margin: 0;
+}
+
+ ul,
+ ol {
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ ol ol,
+ ul ol {
+  list-style-type: lower-roman;
+}
+
+ ul ul ol,
+ ul ol ol,
+ ol ul ol,
+ ol ol ol {
+  list-style-type: lower-alpha;
+}
+
+ dd {
+  margin-left: 0;
+}
+
+ code,
+ pre,
+ samp {
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-size: 12px;
+}
+
+ pre {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ kbd {
+  background-color: #e7e7e7;
+  background-image: -moz-linear-gradient(#fefefe, #e7e7e7);
+  background-image: -webkit-linear-gradient(#fefefe, #e7e7e7);
+  background-image: linear-gradient(#fefefe, #e7e7e7);
+  background-repeat: repeat-x;
+  border-radius: 2px;
+  border: 1px solid #cfcfcf;
+  color: #000;
+  padding: 3px 5px;
+  line-height: 10px;
+  font: 11px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  display: inline-block;
+}
+
+>*:first-child {
+  margin-top: 0 !important;
+}
+
+>*:last-child {
+  margin-bottom: 0 !important;
+}
+
+ .headeranchor-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  padding-right: 6px;
+  padding-left: 30px;
+  margin-left: -30px;
+}
+
+ .headeranchor-link:focus {
+  outline: none;
+}
+
+ h1,
+ h2,
+ h3,
+ h4,
+ h5,
+ h6 {
+  position: relative;
+  margin-top: 1em;
+  margin-bottom: 16px;
+  font-weight: bold;
+  line-height: 1.4;
+}
+
+ h1 .headeranchor,
+ h2 .headeranchor,
+ h3 .headeranchor,
+ h4 .headeranchor,
+ h5 .headeranchor,
+ h6 .headeranchor {
+  display: none;
+  color: #000;
+  vertical-align: middle;
+}
+
+ h1:hover .headeranchor-link,
+ h2:hover .headeranchor-link,
+ h3:hover .headeranchor-link,
+ h4:hover .headeranchor-link,
+ h5:hover .headeranchor-link,
+ h6:hover .headeranchor-link {
+  height: 1em;
+  padding-left: 8px;
+  margin-left: -30px;
+  line-height: 1;
+  text-decoration: none;
+}
+
+ h1:hover .headeranchor-link .headeranchor,
+ h2:hover .headeranchor-link .headeranchor,
+ h3:hover .headeranchor-link .headeranchor,
+ h4:hover .headeranchor-link .headeranchor,
+ h5:hover .headeranchor-link .headeranchor,
+ h6:hover .headeranchor-link .headeranchor {
+  display: inline-block;
+}
+
+ h1 {
+  padding-bottom: 0.3em;
+  font-size: 2.25em;
+  line-height: 1.2;
+  border-bottom: 1px solid #eee;
+}
+
+ h2 {
+  padding-bottom: 0.3em;
+  font-size: 1.75em;
+  line-height: 1.225;
+  border-bottom: 1px solid #eee;
+}
+
+ h3 {
+  font-size: 1.5em;
+  line-height: 1.43;
+}
+
+ h4 {
+  font-size: 1.25em;
+}
+
+ h5 {
+  font-size: 1em;
+}
+
+ h6 {
+  font-size: 1em;
+  color: #777;
+}
+
+ p,
+ blockquote,
+ ul,
+ ol,
+ dl,
+ table,
+ pre,
+ .admonition {
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+
+ hr {
+  height: 4px;
+  padding: 0;
+  margin: 16px 0;
+  background-color: #e7e7e7;
+  border: 0 none;
+}
+
+ ul,
+ ol {
+  padding-left: 2em;
+}
+
+ ul ul,
+ ul ol,
+ ol ol,
+ ol ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ li>p {
+  margin-top: 16px;
+}
+
+ dl {
+  padding: 0;
+}
+
+ dl dt {
+  padding: 0;
+  margin-top: 16px;
+  font-size: 1em;
+  font-style: italic;
+  font-weight: bold;
+}
+
+ dl dd {
+  padding: 0 16px;
+  margin-bottom: 16px;
+}
+
+ blockquote {
+  padding: 0 15px;
+  color: #777;
+  border-left: 4px solid #ddd;
+}
+
+ blockquote>:first-child {
+  margin-top: 0;
+}
+
+ blockquote>:last-child {
+  margin-bottom: 0;
+}
+
+ table {
+  display: block;
+  width: 100%;
+  overflow: auto;
+  word-break: normal;
+  word-break: keep-all;
+}
+
+ table th {
+  font-weight: bold;
+}
+
+ table th,
+ table td {
+  padding: 6px 13px;
+  border: 1px solid #ddd;
+}
+
+ table tr {
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+}
+
+ table tr:nth-child(2n) {
+  background-color: #f8f8f8;
+}
+
+ img {
+  max-width: 100%;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+ code,
+ samp {
+  padding: 0;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(0,0,0,0.04);
+  border-radius: 3px;
+}
+
+ code:before,
+ code:after {
+  letter-spacing: -0.2em;
+  content: "\00a0";
+}
+
+ pre>code {
+  padding: 0;
+  margin: 0;
+  font-size: 100%;
+  word-break: normal;
+  white-space: pre;
+  background: transparent;
+  border: 0;
+}
+
+ .codehilite {
+  margin-bottom: 16px;
+}
+
+ .codehilite pre,
+ pre {
+  padding: 16px;
+  overflow: auto;
+  font-size: 14px;
+  line-height: 1.45;
+  background-color: #f7f7f7;
+  border-radius: 3px;
+}
+
+ .codehilite pre {
+  margin-bottom: 0;
+  word-break: normal;
+}
+
+ pre {
+  word-wrap: normal;
+}
+
+ pre code {
+  display: inline;
+  max-width: initial;
+  padding: 0;
+  margin: 0;
+  overflow: initial;
+  line-height: inherit;
+  word-wrap: normal;
+  background-color: transparent;
+  border: 0;
+}
+
+ pre code:before,
+ pre code:after {
+  content: normal;
+}
+
+/* Admonition */
+ .admonition {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  padding: 0.5em 1em 0.5em 1em;
+  color: #888888;
+  background-color: #F7F7F7;
+  border: 1px solid #888888;
+}
+
+ .admonition blockquote {
+  color: rgba(136, 136, 136, 0.5);
+  border-left: 4px solid rgba(136, 136, 136, 0.5);
+}
+
+ .admonition table {
+  color: #333;
+}
+
+ .admonition p {
+  padding: 0;
+  margin: 0;
+}
+
+ .admonition-title {
+  font-weight: bold;
+  margin: 0;
+}
+
+ .admonition-icon {
+  font: normal normal 16px fontawesome-mini;
+  line-height: 1.5;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  float: left;
+}
+
+ .attention {
+  color: #4F8A10;
+  background-color: #DFF2BF;
+  border: 1px solid #4F8A10;
+}
+
+ .caution {
+  color: #D63301;
+  background-color: #FFCCBA;
+  border: 1px solid #D63301;
+}
+
+ .hint {
+  color: #00529B;
+  background-color: #BDE5F8;
+  border: 1px solid #00529B;
+}
+
+ .danger {
+  color: #D8000C;
+  background-color: #FFBABA;
+  border: 1px solid #D8000C;
+}
+
+ .question {
+  color: #00049b;
+  background-color: #BDC8F8;
+  border: 1px solid #00049b;
+}
+
+ .note {
+  color: #9F6000;
+  background-color: #FEEFB3;
+  border: 1px solid #9F6000;
+}
+
+ .attention {
+  color: #4F8A10;
+  background-color: #DFF2BF;
+  border: 1px solid #4F8A10;
+}
+
+ .caution blockquote {
+  color: rgba(214, 51, 1, .5);
+  border-left: 4px solid rgba(214, 51, 1, .5);
+}
+
+ .hint blockquote {
+  color: rgba(0, 82, 155, .5);
+  border-left: 4px solid rgba(0, 82, 155, .5);
+}
+
+ .danger blockquote {
+  color: rgba(216, 0, 12, .5);
+  border-left: 4px solid rgba(216, 0, 12, .5);
+}
+
+ .question blockquote {
+  color: rgba(0, 4, 155, .5);
+  border-left: 4px solid rgba(0, 4, 155, .5);;
+}
+
+ .note blockquote {
+  color: rgba(159, 96, 0, .5);
+  border-left: 4px solid rgba(159, 96, 0, .5);
+}
+
+ .admonition-icon:before {
+  content: "\f040\00a0";
+}
+
+ .attention > .admonition-icon:before {
+  content: "\f058\00a0";
+}
+
+ .caution > .admonition-icon:before {
+  content: "\f06a\00a0";
+}
+
+ .hint > .admonition-icon:before {
+  content: "\f05a\00a0";
+}
+
+ .danger > .admonition-icon:before {
+  content: "\f056\00a0";
+}
+
+ .question > .admonition-icon:before {
+  content: "\f059\00a0";
+}
+
+ .note > .admonition-icon:before {
+  content: "\f040\00a0";
+}
+
+/* progress bar*/
+ .progress {
+  display: block;
+  width: 300px;
+  margin: 10px 0;
+  height: 24px;
+  border: 1px solid #ccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #F8F8F8;
+  position: relative;
+  box-shadow: inset -1px 1px 3px rgba(0, 0, 0, .1);
+}
+
+ .progress-label {
+  position: absolute;
+  text-align: center;
+  font-weight: bold;
+  width: 100%; margin: 0;
+  line-height: 24px;
+  color: #333;
+  text-shadow: 1px 1px 0 #fefefe, -1px -1px 0 #fefefe, -1px 1px 0 #fefefe, 1px -1px 0 #fefefe, 0 1px 0 #fefefe, 0 -1px 0 #fefefe, 1px 0 0 #fefefe, -1px 0 0 #fefefe, 1px 1px 2px #000;
+  -webkit-font-smoothing: antialiased !important;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+ .progress-bar {
+  height: 24px;
+  float: left;
+  border-right: 1px solid #ccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #34c2e3;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .5);
+  background-size: 30px 30px;
+  background-image: -webkit-linear-gradient(
+    135deg, rgba(255, 255, 255, .4) 27%,
+    transparent 27%,
+    transparent 53%, rgba(255, 255, 255, .4) 53%,
+    rgba(255, 255, 255, .4) 77%,
+    transparent 77%, transparent
+  );
+  background-image: -moz-linear-gradient(
+    135deg,
+    rgba(255, 255, 255, .4) 27%, transparent 27%,
+    transparent 53%, rgba(255, 255, 255, .4) 53%,
+    rgba(255, 255, 255, .4) 77%, transparent 77%,
+    transparent
+  );
+  background-image: -ms-linear-gradient(
+    135deg,
+    rgba(255, 255, 255, .4) 27%, transparent 27%,
+    transparent 53%, rgba(255, 255, 255, .4) 53%,
+    rgba(255, 255, 255, .4) 77%, transparent 77%,
+    transparent
+  );
+  background-image: -o-linear-gradient(
+    135deg,
+    rgba(255, 255, 255, .4) 27%, transparent 27%,
+    transparent 53%, rgba(255, 255, 255, .4) 53%,
+    rgba(255, 255, 255, .4) 77%, transparent 77%,
+    transparent
+  );
+  background-image: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, .4) 27%, transparent 27%,
+    transparent 53%, rgba(255, 255, 255, .4) 53%,
+    rgba(255, 255, 255, .4) 77%, transparent 77%,
+    transparent
+  );
+}
+
+ .progress-100plus .progress-bar {
+  background-color: #1ee038;
+}
+
+ .progress-80plus .progress-bar {
+  background-color: #86e01e;
+}
+
+ .progress-60plus .progress-bar {
+  background-color: #f2d31b;
+}
+
+ .progress-40plus .progress-bar {
+  background-color: #f2b01e;
+}
+
+ .progress-20plus .progress-bar {
+  background-color: #f27011;
+}
+
+ .progress-0plus .progress-bar {
+  background-color: #f63a0f;
+}
+
+ .gloss .progress-bar {
+  box-shadow:
+    inset -1px 1px 0 rgba(255, 255, 255, .5),
+    inset 0 -4px 12px rgba(255, 255, 255, .7),
+    inset 0 4px 12px rgba(255, 255, 255, .7),
+    inset 0 -12px 0 rgba(0, 0, 0, .05),
+    inset 1px -1px 0 rgba(255, 255, 255, .2);
+}
+
+ .candystripe-animate .progress-bar{
+  -webkit-animation: animate-stripes 3s linear infinite;
+  -moz-animation: animate-stripes 3s linear infinite;
+  animation: animate-stripes 3s linear infinite;
+}
+
+@-webkit-keyframes animate-stripes {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: 60px 0;
+  }
+}
+
+@-moz-keyframes animate-stripes {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: 60px 0;
+  }
+}
+
+@keyframes animate-stripes {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: 60px 0;
+  }
+}
+
+/* Multimarkdown Critic Blocks */
+ .critic_mark {
+  background: #ff0;
+}
+
+ .critic_delete {
+  color: #c82829;
+  text-decoration: line-through;
+}
+
+ .critic_insert {
+  color: #718c00 ;
+  text-decoration: underline;
+}
+
+ .critic_comment {
+  color: #8e908c;
+  font-style: italic;
+}
+
+ .headeranchor {
+  font: normal normal 16px octicons-anchor;
+  line-height: 1;
+  display: inline-block;
+  text-decoration: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.headeranchor:before {
+  content: '\f05c';
+}
+
+ .task-list-item {
+  list-style-type: none;
+}
+
+ .task-list-item+.task-list-item {
+  margin-top: 3px;
+}
+
+ .task-list-item input {
+  margin: 0 4px 0.25em -20px;
+  vertical-align: middle;
+}
+
+/* Media */
+@media only screen and (min-width: 480px) {
+   {
+    font-size:14px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+   {
+    font-size:16px;
+  }
+}
+
+@media print {
+   * {
+    background: transparent !important;
+    color: black !important;
+    filter:none !important;
+    -ms-filter: none !important;
+  }
+
+   {
+    font-size:12pt;
+    max-width:100%;
+    outline:none;
+    border: 0;
+  }
+
+   a,
+   a:visited {
+    text-decoration: underline;
+  }
+
+   .headeranchor-link {
+    display: none;
+  }
+
+   a[href]:after {
+    content: " (" attr(href) ")";
+  }
+
+   abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+
+   .ir a:after,
+   a[href^="javascript:"]:after,
+   a[href^="#"]:after {
+    content: "";
+  }
+
+   pre {
+    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+
+   pre,
+   blockquote {
+    border: 1px solid #999;
+    padding-right: 1em;
+    page-break-inside: avoid;
+  }
+
+   .progress,
+   .progress-bar {
+    box-shadow: none;
+  }
+
+   tr,
+   img {
+    page-break-inside: avoid;
+  }
+
+   img {
+    max-width: 100% !important;
+  }
+
+   p,
+   h2,
+   h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+   h2,
+   h3 {
+    page-break-after: avoid;
+  }
 }
